<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.about.AboutFragment"
    android:padding="@dimen/margin_10">

    <TextView
        android:id="@+id/heading_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_headine_01"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/desc_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_01"
        android:text="@string/about_desc_01"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/margin_10"/>

    <TextView
        android:id="@+id/heading_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_01"
        android:text="@string/about_headine_02"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/desc_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_02"
        android:textColor="@android:color/white"
        android:text="@string/about_desc_02"
        android:layout_marginBottom="@dimen/margin_10"/>

    <TextView
        android:id="@+id/heading_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_02"
        android:text="@string/about_headine_03"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/desc_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_03"
        android:textColor="@android:color/white"
        android:text="@string/about_desc_03"
        android:layout_marginBottom="@dimen/margin_10"/>

    <TextView
        android:id="@+id/heading_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_03"
        android:text="@string/about_headine_04"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/desc_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_04"
        android:textColor="@android:color/white"
        android:text="@string/about_desc_04"
        android:layout_marginBottom="@dimen/margin_10"/>

    <TextView
        android:id="@+id/heading_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_04"
        android:text="@string/about_headine_05"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/desc_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_below="@+id/heading_05"
        android:text="@string/about_headine_05"
        android:layout_marginBottom="@dimen/margin_10"/>

    <TextView
        android:id="@+id/heading_06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_05"
        android:text="@string/about_headine_06"
        android:textColor="@color/yellow"
        />

    <TextView
        android:id="@+id/desc_06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_06"
        android:text="@string/about_desc_06"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/margin_10"/>

    <TextView
        android:id="@+id/heading_07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_06"
        android:text="@string/about_headine_07"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/desc_07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_07"
        android:textColor="@android:color/white"/>


</RelativeLayout>