<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tournaments"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/tittle_my_matches" />

    <item
        android:id="@+id/navigation_my_matches"
        android:icon="@drawable/ic_star_big_on_pressed"
        android:title="@string/tittle_my_matches" />
    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>